--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,8 @@ a {
 }
 
 img {
-  /*max-width: 100%;*/
   height: auto;
 }
-
-
 
 li {
   list-style: none;
@@ -128,10 +125,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
- /* flex-wrap: wrap;*/
-  /*height: 140px;*/
   width: 820px;
-  /*margin: 0 auto;*/
   margin-top: 48px;
 }
 
@@ -150,11 +144,6 @@ li {
   opacity: 0.3;
 }
 
-
-/*.main-navigation {
-  width: 440px;
-}*/
-
 .site-navigation,
 .site-navigation-cart {
   font-weight: 500;
@@ -165,7 +154,6 @@ li {
 
 .site-navigation {
   min-width: 440px;
-  /*margin-right: 77px;*/
 }
 
 .site-navigation-list {
@@ -175,7 +163,6 @@ li {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  /*height: 65px;*/
 }
 
 .site-navigation-item-current {
@@ -202,7 +189,7 @@ li {
   left: -38px;
   width: 16px;
   height: 18px;
-  background-image: url("/img/cart-icon.svg");
+  background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -249,15 +236,15 @@ li {
 }
 
 .site-wrapper-1 {
-  background-image: url("/img/slider-item-1.png");
+  background-image: url("../img/slider-item-1.png");
 }
 
 .site-wrapper-2 {
-  background-image: url("/img/slider-item-2.png");
+  background-image: url("../img/slider-item-2.png");
 }
 
 .site-wrapper-3 {
-  background-image: url("/img/slider-item-3.png");
+  background-image: url("../img/slider-item-3.png");
 }
 
 .slider-list {
@@ -373,8 +360,6 @@ li {
 
 .services-img {
   order: -1;
-  /*height: 300px;
-  width: 146px;*/
 }
 
 .services-button {
@@ -649,7 +634,7 @@ dt {
   left: -31px;
   width: 23px;
   height: 27px;
-  background-image: url(/img/check.svg);
+  background-image: url(../img/check.svg);
   opacity: 0.4;
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -683,8 +668,6 @@ dt {
   margin: 0;
   padding: 0;
   border: none;
-
-  /* Для демонстрации */
   width: 260px;
   margin: 50px auto; 
 }
@@ -850,7 +833,6 @@ dt {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /*margin-right: 141px;*/
 }
 
 .sorting-controls-down path,
@@ -896,7 +878,6 @@ dt {
   margin-top: -3px;
   object-fit: contain;
   background-color: var(--color-white);
-  /*box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.25);*/
 }
 
 .catalog-item-image {
@@ -1011,10 +992,8 @@ dt {
 
 /* Contacts */
 
-
 .contacts {
   position: relative;
-
 }
 
 .contacts-map {
@@ -1034,9 +1013,6 @@ dt {
   top: 55px;
   left: 162px;
   background-color: var(--color-white);
-  /*max-width: 319px;
-  width: 100%;
-  height: 308px;*/
   padding-top: 47px;
   padding-bottom: 47px;
   padding-right: 50px;
@@ -1209,7 +1185,6 @@ dt {
   top: 120px;
   bottom: auto;
   width: 760px;
-  /*min-height: 421px;*/
   padding: 65px 100px;
 }
 
